--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.netlify.com/forms/v2/netlify-forms.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   </head>
   <body>
     <h1>Registration Form</h1>
-    <form name="registration" method="POST" data-netlify="true">
+    <form name="registration" id="registration" method="POST" data-netlify="true">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
@@ -30,24 +31,24 @@
     </form>
 
     <script>
-      const form = document.forms.registration;
-
-      form.addEventListener('submit', (event) => {
-        event.preventDefault();
+      
+      function submitForm() {
+        const form = document.getElementById('registration');
         const formData = new FormData(form);
+
         fetch('/', {
           method: 'POST',
           body: formData,
         })
-          .then(() => {
-            alert('Registration successful!');
-            form.reset();
-          })
-          .catch((error) => {
-            alert('Registration failed. Please try again later.');
-            console.error(error);
-          });
-      });
+        .then(() => {
+          window.location.href = "RegistrationSuccess.html";
+        })
+        .catch((error) => {
+          console.error(error);
+          alert('An error occurred while submitting the form. Please try again later.');
+        });
+      }
+     
     </script>
   </body>
 </html>
