--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <label for="starting-weight">Starting Weight (kg):</label>
       <input type="number" id="starting-weight" name="starting-weight" step="0.01" required />
 
-      <input type="hidden" name="form-name" value="registration-form">
+      <input type="hidden" name="form-name" value="registration">
       <button type="submit">Submit</button>
     </form>
 
